--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,13 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/primeflex/primeflex.css",
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/saga-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
               "src/styles.css"
+              
+              
             ],
             "scripts": []
           },
