--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@angular/compiler": "~10.2.0",
     "@angular/core": "~10.2.0",
     "@angular/forms": "~10.2.0",
+    "@angular/localize": "~10.2.0",
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
+    "@angular/youtube-player": "^10.2.7",
     "@fortawesome/fontawesome-free": "^5.15.2",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.4",
     "bootstrap": "^4.6.0",
     "html2canvas": "^1.0.0-rc.7",
     "primeflex": "^2.0.0",
